syntax = 'proto3';

package user.v1;

option go_package = 'github.com/defany/user-service/proto/pkg/auth_v1;auth_v1';

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  /* https://buf.build/docs/lint/rules#rpc_request_response */
  // buf:lint:ignore RPC_SAME_RESPONSE_TYPE
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  /* https://buf.build/docs/lint/rules#rpc_request_response */
  // buf:lint:ignore RPC_SAME_RESPONSE_TYPE
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string password_confirm = 5;
  UserRole role = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

enum UserRole {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  UserRole role = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  /*
    Считаю, что нам не нужно в GetResponse слать пароль юзера, даже зашифрованный
    Поэтому описал только те поля, которые будем возвращать
  */
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetUsersRequest {
  repeated string nicknames = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message UpdateRequest {
  int64 id = 1;
  optional string name = 2;
  optional string email = 3;
  optional UserRole role = 4; /* optional, т.к. роль тоже не всегда нужно обновлять */
}

message DeleteRequest {
  int64 id = 1;
}